--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body {
 		"Droid Sans", "Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	font-family: "Assistant", sans-serif;
+	font-weight: 800;
 }
 
 code {
